[package]
name = "rezip"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Hyunmin Kang"]

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
tempfile = "3"
zip = { version = "5", features = [
    "deflate-zopfli",
    "deflate-flate2-zlib",
    "deflate64",
    "bzip2",
    "ppmd",
    "xz",
    "zstd",
], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0", features = ["wincon", "winnls"] }

[lints.clippy]
needless_return = "allow"
